syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
option go_package = "github.com/mahmoud24598salah/MSM_Bank/pb";

service MSMBank{
    rpc CreateUser (CreateUserRequest)returns (CreateUserRes){
        option (google.api.http) = {
            post:"/v1/create_user"
        };
    }
    rpc LoginUser (LoginUserRequest) returns (LoginUserRes){
        option (google.api.http) = {
            post:"/v1/login_user"
        };
    }
}